Added the ability to set little alert messages under the main nav in the pagecontent model :)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ db.sqlite3
 staff/migrations/*
 !staff/migrations/__init__.py
 !staff/migrations/0001_initial.py
+
+students/migrations/*
+!students/migrations/__init__.py
+!students/migrations/0001_initial.py
